--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   lottie: ^3.1.0
   get: ^4.6.6
+  google_fonts:
+  email_validator: ^2.1.17
+  fluttertoast: ^8.2.5
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
