--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   email_validator: ^2.1.17
   fluttertoast: ^8.2.5
   dropdown_button2: ^2.3.9
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
