--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   fluttertoast: ^8.2.5
   dropdown_button2: ^2.3.9
   get_storage: ^2.1.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
